# gnom-hub

./: .gitignore  AGENTS.md  AGENT_DEFINITIONS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GNOM_HUB_FULL_REPORT.md  GNOM_HUB_MASTER_BRIEFING.md  GNOM_HUB_STATUS.md  LICENSE  PHASE_16_IDEA.md  PRE_PUSH_CHECKLIST.md  PROJECT_STRUCTURE.md  README.de.md  README.md  README_EN.md  _config.yml  agents.json  apikeys.py  apikeysAG.py  backupAG.py  blockade_rules.json.bak  capability_manager.json  capability_manager.yaml  clean.js  clean_gnom_hub.py  creatorAG.py  cronjob.py  cronjobAG.py  demo.html  elara.py  fix_agents.py  fix_except_pass.py  general.py  generalAG.py  index.html  install.py  install.sh  instructions.md  kira.py  (+46 more)
Gnom-Hub/: .gitignore  README.md  clean_gnom_hub.py  pyproject.toml  scratch_scan.py  test_gnom_hub.py
Gnom-Hub/frontend/: index.html  style.css
Gnom-Hub/src/gnom_hub/: __init__.py  __main__.py  audio_tts.py  brainstorm.py  chat_commands.py  config.py  hub_app.py  hub_mcp.py  hub_pulse.py  models.py  routes_agents.py  routes_audio.py  routes_chat.py  routes_memory.py  routes_registry.py
Gnom-Hub_bak/: README.md  pyproject.toml
Gnom-Hub_bak/src/cortex/: __init__.py  bsa_orchestrator.py  config.py  cortex_app.py  cortex_mcp.py  cortex_mcp_client.py  cortex_mcp_server.py  cortex_msg.py  cortex_pulse.py  db.py  tts_queue.py
Gnom-Hub_bak/src/cortex/.cortex/: pulse_state.json
Gnom-Hub_bak/src/gnom_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
agents/: __init__.py  coderAG.py  editorAG.py  generalAG.py  researcherAG.py  run_agent.py  securityAG.py  soulAG.py  watchdogAG.py  writerAG.py
config/: .env.example  .gnom-hub-tokens-3002.json  agent_tools.json  routing.txt  tmpgrbh6d0f.tmp
coordination/: securityag_sprint3_state.json
cortex/: embeddings.js  filter.js  index.js  mcp-server.js
data_backup_20260604_005904/: soul_embeddings_coderag.index  soul_embeddings_editorag.index  soul_embeddings_global.index  soul_embeddings_researcherag.index  soul_embeddings_writerag.index  soul_fact_ids_coderag.json  soul_fact_ids_editorag.json  soul_fact_ids_global.json  soul_fact_ids_researcherag.json  soul_fact_ids_writerag.json
delegations/: 2026-07-29_browser_open_chain.md
docs/: ARCHITECTURE.md  FEATURE_INVENTORY.md  MEMORY_GRAPH.md  MEMORY_REDESIGN_2026_TKG.md  MEMORY_REDESIGN_CONCEPT.md  PLAN_STABILITAET.md  README_CODE_ALIGNMENT_2026-07.md  STRATEGY_PLAN_2026.md  TECHNICAL_STATUS_REPORT_2026-07.md  _config.yml  backlog.md  backup-agent-konzept.md  developer_handover_report.md  gnom_hub_concept.md  gnom_hub_developer_report.md  gnom_hub_documentation.md  idee-api-key-boerse.md  index.html  mc707_handoff.md  postmortem-001-gelber-bildschirm.md  security-agent-konzept.md  sitemap.xml  status-report-2026-05-14.md  tencentdb-comparison.md
frontend/: app.js  help.html  index.html  showbox.css  showbox.js  style.css  themes.js
gnom_workspace/: konzept.txt  readme.md  seo_strategie.md  todo_app.py  willkommen.txt
inseln/: elara.md  kira.md  lian.md
kreativ_universe_kira_lian_elara/: index.html
netzwerkpunkt_showcase/: README.md  a0.html  chain_sat_0.html  chain_sat_11.html  chain_sat_14.html  chain_sat_15.html  chain_sat_17.html  chain_sat_18.html  chain_sat_2.html  chain_sat_20.html  chain_sat_21.html  chain_sat_24.html  chain_sat_26.html  chain_sat_5.html  chat_test_a.html  chat_test_b.html  combo_2.html  combo_4.html  editorag_test.html  flood_1.html  flood_3.html  flood_4.html  flood_7.html  gen_2a.html  hammer_0.html  hammer_1.html  hammer_2.html  hammer_3.html  hammer_4.html  hammer_5.html  hammer_6.html  hammer_8.html  index.html  index1.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  (+8 more)
playwright-live/: README.md  drag-drop.js  live-mouse-tracker.js  mouse-control.js
public/: admin.html  app.js  index.html  style.css
scratch/: check_buttons.py  check_console_errors.py  compile_production_gnom.py  debug_tts.py  dump_chat.py  extract_file_signature.py  ftp_mock_server.py  headed_deploy_final.py  headed_deploy_real.py  headed_deploy_trigger.py  last_analysis_state.json  live_test_phase10.py  read_june1_chats.py  recent_chat_messages.txt  reset_hub_state.py  run_all_tests.py  run_benchmarks.py  run_chat_evaluation.py  run_coder_test.py  run_test.py  step1_session1.py  step2_session2.py  test_adaptive_decomposition.py  test_additional_systems.py  test_agent_limit.py  test_agent_optimizer.py  test_capabilities.py  test_conflict_resolution.py  test_context_manager.py  test_custom_presets.py  test_evolution.py  test_feedback.py  test_gatekeeper_rules.py  test_generalag_orchestration.py  test_integration_top5.py  test_live_feedback.py  test_offline_embeddings.py  test_phase10.py  test_prompt_versioning.py  test_showbox_decision.py  (+8 more)
scripts/: agent-setup-minimal.sh  backup_all_dbs.sh  benchmark_hybrid_vs_vector.py  build_frontend_ts.sh  clean_db.py  dedup_soul_memory.py  diagnose_hub.py  e2e_delivery_check.sh  fetch_openrouter_free.py  install.sh  (+28 more)
src/mc707/: README.md  pyproject.toml
src/mc707/mc707/: __init__.py  facade.py
src/mc707/mc707/control/: __init__.py  arpeggiator.py  clips.py  effects.py  patterns.py  scenes.py  sound_editor.py  sounds.py  status.py  transport.py
src/mc707/mc707/io/: __init__.py  midi.py  sysex.py
src/mc707/mc707/models/: __init__.py  sound.py
src/mc707/mc707/persistence/: __init__.py  sound_store.py
src/mc707/mc707/registry/: __init__.py  sound_registry.py
src/mc707/mc707/tests/: __init__.py  test_arpeggiator.py  test_clips.py  test_effects.py  test_patterns.py  test_scenes.py  test_smoke.py  test_sound_system.py  test_status.py  test_sysex.py  test_units.py  test_webui.py
src/mc707/mc707/ui/: __init__.py  __main__.py  app.py  events.py  models.py  state.py  ws.py
src/mc707/mc707/ui/routes/: __init__.py  arpeggiator.py  clips.py  effects.py  patterns.py  scenes.py  sounds.py  state.py  status.py  sysex.py  transport.py
src/mc707/mc707/ui/static/: index.html
src/mc707/mc707/ui/static/css/: style.css
src/mc707/mc707/ui/static/js/: api.js  app.js  ws.js
(+618 files in other folders)
