[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnom-hub"
version = "1.2.0"
description = "Gnom-Hub - Minimalistischer Orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.0",
    "numpy<2",
    "python-multipart",
]

[project.scripts]
gnom-hub = "gnom_hub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import ordering)
    "S",      # bandit (security)
    "UP",     # pyupgrade (deprecated syntax)
    "B",      # bugbear (common pitfalls)
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "E731",   # lambda assignment
    "S101",   # assert usage
    "S603",   # subprocess without shell=True
    "S607",   # partial path for subprocess
    "B023",   # function def in loop
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = ["load_test: marks tests as load/stress tests (longer runtime)"]

[tool.ruff.lint.per-file-ignores]
"agents/*.py" = ["E402"]  # module level import not at top
"scripts/*.py" = ["S", "E402"]  # scripts may have security-irrelevant patterns
