[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnom-hub"
version = "1.2.0"
description = "Gnom-Hub - Minimalistischer Orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "python-multipart",
]

[project.scripts]
gnom-hub = "gnom_hub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import ordering)
    "S",      # bandit (security)
    "UP",     # pyupgrade (deprecated syntax)
    "B",      # bugbear (common pitfalls)
]
ignore = [
    "E501",   # line too long (handled by line-length)
    "E731",   # lambda assignment
    "S101",   # assert usage
    "S603",   # subprocess without shell=True
    "S607",   # partial path for subprocess
    "B023",   # function def in loop
    "E701",   # multiple statements on one line (colon) — kompakter Projekt-Stil
    "E702",   # multiple statements on one line (semicolon) — kompakter Projekt-Stil
]

[project.optional-dependencies]
memory = ["sentence-transformers>=3.0.0", "faiss-cpu>=1.7.0", "numpy<2"]
tkg = ["kuzu>=0.11.0"]
dev = ["pytest>=7.0", "httpx>=0.24", "pytest-asyncio", "playwright>=1.40"]
audio = [
    "mc707 @ git+ssh://git@github.com/landjunge/mc707.git",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Pre-existing failures — broken on HEAD before any v9.0 work (verified 2026-07-11).
# Mirrors CI's --ignore list in .github/workflows/ci.yml + local_ci.sh so the
# Mavis pre-push (which runs raw `pytest tests/`) gets the same result as CI.
# Without this, Mavis pre-push fails on test_faiss_lock.py (sentence_transformers
# ImportError) and test_chat_end_to_end.py (SoulAG-routing pre-existing bug).
addopts = [
    "-v",
    "--tb=short",
    "--ignore=tests/test_stress_50.py",
    "--ignore=tests/test_faiss_lock.py",
    "--ignore=tests/test_browser_action.py",
    "--ignore=tests/test_browser_chat_mouse.py",
    "--ignore=tests/test_browser_full.py",
    "--ignore=tests/test_browser_workflows.py",
    "--ignore=tests/test_llm_page_browser.py",
    "--ignore=tests/integration/test_prompt_pipeline_golden.py",
    "--ignore=tests/test_agent_names_frozen.py",
    "--ignore=tests/test_default_preset_content.py",
    "--ignore=tests/test_gnom_hub.py",
    "--ignore=tests/test_migrations.py",
    "--ignore=tests/test_openrouter.py",
    "--ignore=tests/test_workspace_config.py",
    "--ignore=tests/integration/test_chat_end_to_end.py",
    # Acceptance-Tests: laufen manuell gegen den LIVE-Hub, nicht in CI/pre-push.
    # User-Mandat 2026-07-12: Akzeptanz ≠ CI-Test (race-condition mit aktiven Agents).
    "--ignore=tests/test_golden_landing_page.py",
    "--ignore=tests/test_golden_demo_video.py",
]
markers = ["load_test: marks tests as load/stress tests (longer runtime)", "requires_hub: requires a running Gnom-Hub on GNOM_HUB_TEST_URL (default 127.0.0.1:3002)"]

[tool.ruff.lint.per-file-ignores]
"src/gnom_hub/agents/**/*.py" = ["E402", "I001", "S110", "F841"]  # agent-Layer: lazy imports, defensive try-except
"src/gnom_hub/api/**/*.py" = ["B008", "E402", "I001", "S110", "F841"]  # FastAPI Depends() + import-order + bare-except
"src/gnom_hub/chat/**/*.py" = ["E402", "I001", "S110", "F841"]  # chat-Module mit komplexen Import-Sequenzen
"src/gnom_hub/core/**/*.py" = ["E402", "I001", "S110", "F841"]  # core utilities
"src/gnom_hub/db/**/*.py" = ["E402", "I001", "S110", "F811", "F841"]  # DB-Module: imports nach constants + idempotent
"src/gnom_hub/infrastructure/**/*.py" = ["E402", "I001", "S110", "F841"]  # Infrastructure-Layer
"src/gnom_hub/frontend/**/*.py" = ["E402", "I001", "S110", "F841"]  # frontend helpers
"src/gnom_hub/memory/**/*.py" = ["E402", "I001", "S110", "F841"]  # memory module: lazy imports
"src/gnom_hub/soul/**/*.py" = ["E402", "I001", "S110", "F841"]  # soul: lazy imports + try-except
"src/gnom_hub/scripts/*.py" = ["S", "E402"]  # scripts may have security-irrelevant patterns
"src/gnom_hub/__main__.py" = ["E402", "I001"]  # CLI bootstrap imports
"src/gnom_hub/conftest.py" = ["E402", "I001", "S110"]  # pytest conftest mit conditional imports
"tests/**/*.py" = ["S", "B011", "E402", "I001", "S110", "E722", "S311", "S310", "F841"]  # tests dürfen alles
"conftest.py" = ["E402", "I001", "S110"]  # pytest conftest mit conditional imports
