[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnom-hub"
version = "0.1.0"
description = "Gnom-Hub - Minimalistischer Orchestrator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "mcp",
    "psutil"
]

[project.scripts]
gnom-hub = "gnom_hub.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
