[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnom-hub"
version = "0.1.0"
description = "Gnom-Hub Cortex - das zentrale Nervensystem"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0"
]

[project.scripts]
cortex-hub = "cortex.cortex_app:main"
cortex-mcp = "cortex.cortex_mcp_server:main"
cortex-pulse = "cortex.cortex_pulse:main"
cortex-stop = "cortex.cortex_app:stop"

[tool.setuptools.packages.find]
where = ["src"]
