[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mc707"
version = "0.1.0"
description = "Roland MC-707 Groovebox MIDI controller library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Gnom-Hub Contributors" },
]
keywords = ["midi", "roland", "mc-707", "groovebox", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Musicians",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "mido>=1.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mc707*"]

# Ship the bundled WebUI (HTML / CSS / JS) inside the wheel so
# `pip install mc707[ui]` plus a static-file mount gives you a
# complete self-contained server — no external CDN needed.
[tool.setuptools.package-data]
mc707 = ["ui/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["mc707/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP", "B"]
ignore = [
    "E501",
    "E731",
    "S101",
    "S603",
    "S607",
    "B023",
]